# ComputerVision-Project

FocusStack/C++/: CMakeLists.txt  FocusStack.hpp  main.cpp  trying.cpp
FocusStack/Python/: FocusStack.py  main.py
QT封装图像边缘检测程序/README/: README.md
QtPackageFluorescenceRecognitionAndDetectionProgram/QT_ImageEdgeDetecion/ImageDetection/: ImageDetection.pro  detectimage.cpp  detectimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtPackageFluorescenceRecognitionAndDetectionProgram/QT_ImageEdgeDetecion/build-ImageDetection-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
QtPackageFluorescenceRecognitionAndDetectionProgram/QT_ImageEdgeDetecion/build-ImageDetection-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/debug/: ImageDetection.ilk  ImageDetection_resource.res  moc_mainwindow.cpp
QtPackageFluorescenceRecognitionAndDetectionProgram/QT_ImageEdgeDetecion/build-ImageDetection-Desktop_Qt_5_13_0_MSVC2017_64bit-Release/: ImageDetection_resource.rc  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QtPackageFluorescenceRecognitionAndDetectionProgram/QT_ImageEdgeDetecion/build-ImageDetection-Desktop_Qt_5_13_0_MSVC2017_64bit-Release/release/: ImageDetection_resource.res
QtPackageFluorescenceRecognitionAndDetectionProgram/README/: README.md
Yolo摄像头&多线程/: README.md
Yolo摄像头&多线程/SourceCode/: CMakeLists.txt  main.cpp  tasks.hpp  yolo.hpp
